site.css
/* ... */
.ui-state-highlight a, .ui-widget-content .ui-state-highlight a,.ui-widget-header .ui-state-highlight a { color: #363636; }
.ui-state-error, .ui-widget-content .ui-state-error, .ui-widget-header .ui-state-error {border: 1px solid #cd0a0a; background: #b81900 url(http://forums.e-democracy.org/++resource++jquery-icons/ui-bg_diagonals-thick_18_b81900_40x40.png) 50% 50% repeat; color: #ffffff; }
.ui-state-error a, .ui-widget-content .ui-state-error a, .ui-widget-header .ui-state-error a { color: #ffffff; }
.ui-state-error-text, .ui-widget-content .ui-state-error-text, .ui-widget-header .ui-state-error-text { color: #ffffff; }
.ui-priority-primary, .ui-widget-content .ui-priority-primary, .ui-widget-header .ui-priority-primary { font-weight: bold; }
.ui-priority-secondary, .ui-widget-content .ui-priority-secondary,  .ui-widget-header .ui-priority-secondary { opacity: .7; filter:Alpha(Opacity=70); font-weight: normal; }
.ui-state-disabled, .ui-widget-content .ui-state-disabled, .ui-widget-header .ui-state-disabled { opacity: .35; filter:Alpha(Opacity=35); background-image: none; }

/* Icons
----------------------------------*/

/* states and images */
.ui-icon { width: 16px; height: 16px; background-image: url(http://forums.e-democracy.org/++resource++jquery-icons/ui-icons_222222_256x240.png); }
.ui-widget-content .ui-icon {background-image: url(http://forums.e-democracy.org/++resource++jquery-icons/ui-icons_222222_256x240.png); }
.ui-widget-header .ui-icon {background-image: url(http://forums.e-democracy.org/++resource++jquery-icons/ui-icons_003366_256x240.png); }
.ui-state-default .ui-icon { background-image: url(http://forums.e-democracy.org/++resource++jquery-icons/ui-icons_003366_256x240.png); }
.ui-state-hover .ui-icon, .ui-state-focus .ui-icon {background-image: url(http://forums.e-democracy.org/++resource++jquery-icons/ui-icons_003366_256x240.png); }
.ui-state-active .ui-icon {background-image: url(http://forums.e-democracy.org/++resource++jquery-icons/ui-icons_003366_256x240.png); }
.ui-state-highlight .ui-icon {background-image: url(http://forums.e-democracy.org/++resource++jquery-icons/ui-icons_2e83ff_256x240.png); }
.ui-state-error .ui-icon, .ui-state-error-text .ui-icon {background-image: url(http://forums.e-democracy.org/++resource++jquery-icons/ui-icons_ffd27a_256x240.png); }

/* Misc visuals
----------------------------------*/

/* Overlays */
.ui-widget-overlay { background: #aaaaaa url(http://forums.e-democracy.org/++resource++jquery-icons/ui-bg_flat_0_aaaaaa_40x100.png) 50% 50% repeat-x; opacity: .30;filter:Alpha(Opacity=30); }
.ui-widget-shadow { margin: -8px 0 0 -8px; padding: 8px; background: #aaaaaa url(http://forums.e-democracy.org/++resource++jquery-icons/ui-bg_flat_0_aaaaaa_40x100.png) 50% 50% repeat-x; opacity: .30;filter:Alpha(Opacity=30); -moz-border-radius: 8px; -webkit-border-radius: 8px; border-radius: 8px; }

/* rounded corners */
.ui-corner-all {
   -moz-border-radius: 5px; -webkit-border-radius: 5px; border-radius: 5px ;
}

/* tabs */
.ui-tabs { padding: 0; }
.ui-tabs .ui-tabs-nav { padding-left: 9px; background: transparent; border-radius: 5px 5px 0 0; }

.ui-tabs .ui-tabs-nav li { border-color: #999999; }
.ui-tabs .ui-tabs-nav li.ui-tabs-selected { border-color: #777777; }
.ui-tabs .ui-tabs-nav li a { padding: 0.5em 1.385em; }

/* photos */
.photo img { border: 1px solid #aaaaaa; border-radius: 3px; }
#us-photos a { border-radius: 3px; }
.figure img { border: 1px solid #aaaaaa; border-radius: 5px; }
.imagegallery img { border: 1px solid #aaaaaa; border-radius: 5px; }
.thumbs img { border: none; border-radius: 3px; }
.images, .thumbs { margin-left: 0; padding-left: 0; }
.thumbs { margin-right: -0.69em; }
img.scaledImage { border: 1px solid #aaaaaa; border-radius: 2%; }
.nextlink img, .prevlink image { border: 1px solid #aaaaaa; border-radius: 3px; }

@media screen and (max-width: 960px) {
  /* All pages*/
  #toparea, #titlebar a {
    color: black;
    background: white;
  }
  #toparea {
    border-bottom: thin solid #003366;
  }
  .navlinks a, .navlinks span {
    background: none;
  }
  /* Group page */
  #group-intro {
    padding-top: 1.385em;
  }
  #us-tasks {
    margin: 0 0.692em 0 0;
    padding: 0 0 0.692em 0;
    background: white;
  }
  #us-tasks ul {
    margin: 0;
  }
  /* Home page */
 #page- .rightColumn, #page- #latestPhotos {
  margin-bottom: 2.769em;
 }
}

